# truenas_pyos

./: CLAUDE.md  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.py  truenas_os.pyi
.github/workflows/: build-test.yml  qemu-test.yml
debian/: changelog  control  python3-truenas-pyos.install  python3-truenas-pyos.links  python3-truenas-pyos.manpages  rules
man/: truenas_getfacl.1  truenas_setfacl.1
scripts/: _getfacl.py  _interactive.py  _setfacl.py
src/: acl.c  acl.h  fhandle.c  fhandle.h  fsiter.c  fsiter.h  fsmount.h  iter_mount.c  mount.c  mount.h  mount_setattr.c  mount_setattr.h  move_mount.c  move_mount.h  nfs4acl.c  open.h  open_by_mnt.c  open_tree.c  open_tree.h  openat2.c  openat2.h  posixacl.c  renameat2.h  statx.c  statx.h  truenas_os.c  truenas_os_state.h
src/cext/: fsiter.c  fsiter.h  fsmount.c  mount.c  truenas_os.c  umount2.c  umount2.h  util_enum.c
src/common/: includes.h
src/truenas_os_pyutils/: README.md  io.py  mount.py  namespace.py
src/truenas_os_utils/: README.md  io.py
stubs/: __init__.pyi
stubs/truenas_os/: __init__.pyi
stubs/truenas_pyfilter/: __init__.pyi
tests/: .stubtest_allowlist.txt  conftest.py  test_acl.py  test_acl_check.py  test_fhandle.py  test_filter_list.py  test_filter_list_pydantic.py  test_fsiter.py  test_mount.py  test_renameat2.py  test_statx.py  test_userns.py  test_xattr.py
tests/scripts/: test_getfacl.py  test_posix_compat.py  test_setfacl.py
tests/type_checks/: test_io_types.py  test_mount_types.py  test_shutil_types.py  test_truenas_shutil_types.py
tests/typing/: test_io_types.py
(+45 files in other folders)
