[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truenas_os"
version = "0.1.0"
description = "TrueNAS OS utilities module"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "TrueNAS Engineering", email = "dev@truenas.com"},
]
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration"
]

[project.scripts]
truenas_getfacl = "_truenas_os_scripts._getfacl:main"
truenas_setfacl = "_truenas_os_scripts._setfacl:main"
